--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
     <div class="wrapper">
       <header>
         <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
-        {% if site.logo %}
+       <!-- {% if site.logo %}
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
-        {% endif %}
+        {% endif %} -->
         <p>
         <a href="{{ "/proceedings/JapanModelica2020Proceedings.html" | absolute_url }}">[Proceedings]</a>
         <a href="{{ "/proceedings/html/program.html" | absolute_url }}">[Program]</a>
