Added conference logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
     <div class="wrapper">
       <header>
         <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
-       <!-- {% if site.logo %}
+        {% if site.logo %}
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
-        {% endif %} -->
+        {% endif %}
         <p>
         <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">[Proceedings]</a>
         <a href="{{ "/proceedings/html/program.html" | absolute_url }}">[Program]</a>
@@ -31,7 +31,8 @@
       <footer>
         <h3>Organized by:</h3>
         <p>
-            <a style="border-bottom: 0px solid #ccc;" href="http://www.modelica.org"><img style="padding:5px;height:24px;width:auto;" src="/proceedings/html/static/images/ModelicaLogo.svg" alt="Modelica" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:50px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a style="border-bottom: 0px solid #ccc;" href="http://www.modelica.org"><img style="padding:5px;height:50px;width:auto;" src="/proceedings/html/static/images/ModelicaLogo.jpg" alt="Modelica" /></a>
         </p>
         <p>
             <a href="#">See our sponsors</a>
