--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,12 @@
           <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="http://www.modelica.org"><img style="padding:5px;height:50px;width:auto;" src="/proceedings/html/static/images/ModelicaLogo.jpg" alt="Modelica" /></a>
         </p>
+        
+         <h3>Sponsored by:</h3>
+        <p>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="http://www.modelica.org"><img style="padding:5px;height:50px;width:auto;" src="/proceedings/html/static/images/ModelicaLogo.jpg" alt="Modelica" /></a>
+        </p>
         <p>
             <a href="#">See our sponsors</a>
          </p>
