Add golden sponsors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,14 @@
           <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="http://www.modelica.org"><img style="padding:5px;height:50px;width:auto;" src="/proceedings/html/static/images/ModelicaLogo.jpg" alt="Modelica" /></a>
         </p>
+         <h4>Sponsored by:</h4>
+        <p>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.avl.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/AVL.jpg" alt="AVL" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="http://https://www.maplesoft.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/Maplesoft_logo.jpg" alt="Maplesoft" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.scsk.jp/index_en.html"><img style="padding:5px;height:40px;width:auto;" src="/proceedings/html/static/images/SCSK.jpg" alt="SCSK" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.zukentec.co.jp/"><img style="padding:5px;height:60px;width:auto;" src="/proceedings/html/static/images/Zuken Tec.png" alt="Zuken Tec" /></a>          
+        </p>
         <p>
             <a href="#">See our sponsors</a>
          </p>
