--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,13 +36,17 @@
         </p>
          <h4>Sponsored by:</h4>
         <p>
-            <a href="#">See our sponsors</a>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.avl.com"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/AVL.jpg" alt="AVL" /></a>
-          <a style="border-bottom: 0px solid #ccc;" href="http://https://www.maplesoft.com"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Maplesoft_logo.jpg" alt="Maplesoft" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.maplesoft.com"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Maplesoft_logo.jpg" alt="Maplesoft" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.modelon.com"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Modelon.png" alt="Modelon" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.scsk.jp/index_en.html"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/SCSK.jpg" alt="SCSK" /></a>
-          <a style="border-bottom: 0px solid #ccc;" href="https://www.zukentec.co.jp/"><img style="padding:5px;height:30px;width:auto;" src="/proceedings/html/static/images/ZukenTec.png" alt="ZukenTec" /></a>                    
-         </p>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.zukentec.co.jp"><img style="padding:5px;height:30px;width:auto;" src="/proceedings/html/static/images/ZukenTec.png" alt="ZukenTec" /></a>                    
+        
+          <a style="border-bottom: 0px solid #ccc;" href="https://new.siemens.com/global/en.html"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Siemens.jpg" alt="Siemens" /></a>                            
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.argo-graph.co.jp"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Argographics.jpg" alt="ArgoGraphics" /></a>                                    
+          <a style="border-bottom: 0px solid #ccc;" href="http://www.neorium.co.jp"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Neorium.jpg" alt="Neorium" /></a>                            
+         <a style="border-bottom: 0px solid #ccc;" href="http://www.newtonworks.co.jp"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/Newtonworks.png" alt="Newtonworks" /></a>                                      
+        </p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
