Change the SCSK logo link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <p>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.avl.com"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/AVL.jpg" alt="AVL" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.maplesoft.com"><img style="padding:5px;height:25px;width:auto;" src="/proceedings/html/static/images/Maplesoft_logo.jpg" alt="Maplesoft" /></a>
-          <a style="border-bottom: 0px solid #ccc;" href="https://www.scsk.jp/index_en.html"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/SCSK.jpg" alt="SCSK" /></a>
+          <a style="border-bottom: 0px solid #ccc;" href="https://www.scsk.jp/product/common/rs/ignite.html"><img style="padding:5px;height:20px;width:auto;" src="/proceedings/html/static/images/SCSK.jpg" alt="SCSK" /></a>
           <a style="border-bottom: 0px solid #ccc;" href="https://www.zukentec.co.jp"><img style="padding:5px;height:35px;width:auto;" src="/proceedings/html/static/images/ZukenTec.png" alt="ZukenTec" /></a>                    
           <a style="border-bottom: 0px solid #ccc;" href="https://new.siemens.com/global/en.html"><img style="padding:5px;height:35px;width:auto;" src="/proceedings/html/static/images/Siemens.jpg" alt="Siemens" /></a>                            
           <a style="border-bottom: 0px solid #ccc;" href="http://www.newtonworks.co.jp"><img style="padding:5px;height:30px;width:auto;" src="/proceedings/html/static/images/Newtonworks.png" alt="Newtonworks" /></a>                                      
