--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,16 +18,18 @@
         {% if site.logo %}
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
-        <br> 
+      </header>
+       <section> 
+       <h4>Program</h4>
         <p>
         <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">[Proceedings]</a>
         <a href="{{ "/proceedings/html/program.html" | absolute_url }}">[Program]</a>
         </p>
-      </header>
+  　　 </section>
+      
       <section>
 　　　<p> </p><br>　
       {{ content }}
-
       </section>
       <footer>
         <h3>Organized by:</h3>
