--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
       </header>
        <section> 
         <p>
-        <a href="{{ "/proceedings/html/program.html" | absolute_url }}">[Program]</a>          
-        <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">[Proceedings]</a>
+        <a href="{{ "/" | absolute_url }}">Home</a>          
+        <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a>          
+        <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
         </p>
   　　 </section>
       
