--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       </header>
       <section>
         <p>
-        <a href="{{ "/" | absolute_url }}"><h4>Home</h4></a>          
-        <a href="{{ "/proceedings/html/program.html" | absolute_url }}"><h4>Program</h4></a>          
-        <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}"><h4>Proceedings</h4></a>
+        <a href="{{ "/" | absolute_url }}">Home</a>          
+        <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a>          
+        <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
         </p>
       {{ content }}
       </section>
