--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
       <section>
         <table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
-<th style="background-color: #e6e6e6"><p><span style="background-color: #e6e6e6;" width="30%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
-<th style="background-color: #e6e6e6"><p><span style="background-color: #e6e6e6;" width="30%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
-<th style="background-color: #e6e6e6"><p><span style="background-color: #e6e6e6;" width="40%"> <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Abstracts</a></span></p></th>
+<th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
+<th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
+<th align="center"; valign="middle"><p><span width="40%"> <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Abstracts</a></span></p></th>
 </tr>
         </table>
 
