--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 <tr>
 <th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
 <th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
-<th align="center"; valign="middle"><p><span width="40%"> <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Abstracts</a></span></p></th>
+<th align="center"; valign="middle"><p><span width="40%"> <a href="{{ "https://whova.com/portal/webapp/amcft_202010/" | absolute_url }}">Virtual Conference</a></span></p></th>
 </tr>
         </table>
 
