--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
         <p>
-           <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
+          <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
+          <a href="https://whova.com/portal/amcft_202010/?source=text_link" class="whova-textlink" target="_blank" style="text-decoration:underline;color:#2DACEE;font-size:16px"/>Get Whova Now</a>
         </p>        
       </header>
       <section>
