--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,7 @@
         {% endif %}
         <p>
           <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
-        </p>
-        <p>
-          <a href="https://whova.com/portal/amcft_202010/?source=text_link" class="whova-textlink" target="_blank" style="text-decoration:underline;color:#2DACEE;font-size:16px"/>Get Whova Now</a>
-        </p>        
+        </p>      
       </header>
       <section>
         <table cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -31,8 +28,9 @@
 <th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
 <th align="center"; valign="middle"><p><span width="30%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
 <th align="center"; valign="middle"><p><span width="40%"> <a href="{{ "https://whova.com/portal/webapp/amcft_202010/" | absolute_url }}">Virtual Conference</a></span></p></th>
+<th align="center"; valign="middle"><p><span width="30%"> <a href="https://whova.com/portal/amcft_202010/?source=text_link" class="whova-textlink" target="_blank" style="text-decoration:underline;color:#2DACEE;font-size:16px"/>Get Whova Now</a> </span></p></th>
 </tr>
-        </table>
+     </table>
 
       {{ content }}
       </section>
