--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
         <p>
-          <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | absolute_url }}">Proceedings</a>
+          <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | https://ep.liu.se/en/conference-issue.aspx?series=ecp&issue=174 }}">Proceedings</a>
         </p>      
       </header>
       <section>
