--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,17 +18,16 @@
         {% if site.logo %}
           <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /></a>
         {% endif %}
-        <p>
-          <a href="{{ "/proceedings/AsianModelica2020Proceedings.html" | https://ep.liu.se/en/conference-issue.aspx?series=ecp&issue=174 }}">Proceedings</a>
-        </p>      
+     
       </header>
       <section>
         <table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
-<th align="center"; valign="middle"><p><span width="25%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
-<th align="center"; valign="middle"><p><span width="25%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
-<th align="center"; valign="middle"><p><span width="25%"> <a href="{{ "https://whova.com/portal/webapp/amcft_202010/" | absolute_url }}">Virtual Conference</a></span></p></th>
-<th align="center"; valign="middle"><p><span width="25%"> <a href="https://whova.com/portal/amcft_202010/?source=text_link" class="whova-textlink" target="_blank" style="text-decoration:underline;color:#2DACEE;font-size:16px"/>Get Whova Now</a> </span></p></th>
+<th align="center"; valign="middle"><p><span width="20%"> <a href="{{ "/" | absolute_url }}">Home</a></span></p></th>  
+<th align="center"; valign="middle"><p><span width="20%"> <a href="{{ "/proceedings/html/program.html" | absolute_url }}">Program</a> </span></p></th>
+<th align="center"; valign="middle"><p><span width="20%"> <a href="{{ "https://ep.liu.se/en/conference-issue.aspx?series=ecp&issue=174" | absolute_url }}">Proceedings</a></span></p></th>
+<th align="center"; valign="middle"><p><span width="20%"> <a href="{{ "https://whova.com/portal/webapp/amcft_202010/" | absolute_url }}">Virtual Conference</a></span></p></th>  
+<th align="center"; valign="middle"><p><span width="20%"> <a href="https://whova.com/portal/amcft_202010/?source=text_link" class="whova-textlink" target="_blank" style="text-decoration:underline;color:#2DACEE;font-size:16px"/>Get Whova Now</a> </span></p></th>
 </tr>
      </table>
 
